# libical

./: CMakeLists.txt
afl/: CMakeLists.txt  icalrecur_iterator.c
afl/in/: recur.FREQ=DAILY;COUNT=3;WKST=SU|20120702T093000  recur.FREQ=DAILY;UNTIL=20120302T090000Z;BYDAY=MO,TU,WE,TH,FR;WKST=SU|20120220T100000  recur.FREQ=DAILY;UNTIL=20151120|20151113T000000  recur.FREQ=DAILY|20140227T160000  recur.FREQ=MONTHLY;BYDAY=-1TH|20140731T124500  recur.FREQ=MONTHLY;BYMONTHDAY=1,28,29,30,31|20130728T163000  recur.FREQ=MONTHLY;COUNT=8;INTERVAL=1;BYDAY=MO;BYSETPOS=1;WKST=SU|20090406T100000  recur.FREQ=MONTHLY;INTERVAL=12;BYMONTHDAY=1,2,7,8,9,13,14|20151207T090000  recur.FREQ=MONTHLY;INTERVAL=3;BYMONTHDAY=1,2,3,4,5,6,7,8,9,10,11,12,13,14|20150301T100000  recur.FREQ=MONTHLY;INTERVAL=3;BYMONTHDAY=10,11,12,13,14,15,16,17,18,19,20,21|20140710T090000  recur.FREQ=MONTHLY;INTERVAL=3;BYMONTHDAY=6,7,8,9,10,11,12,13,14|20150306T090000  recur.FREQ=WEEKLY;BYDAY=MO,TU,WE,TH|20111219T153000  recur.FREQ=WEEKLY;COUNT=249;BYDAY=MO,TU,TH|20130603T163000  recur.FREQ=WEEKLY;UNTIL=20100707T120000Z;BYDAY=TU,WE;WKST=SU|20100317T140000  recur.FREQ=WEEKLY;UNTIL=20120804;BYDAY=MO,TU,WE,TH,FR,SA|20120704T000000  recur.FREQ=WEEKLY;UNTIL=20140826T063000Z;BYDAY=MO,TU,WE,TH,FR,SA,SU|20140806T083000  recur.FREQ=WEEKLY;UNTIL=20150731T070000;BYDAY=MO|20150209T090000  recur.FREQ=YEARLY;BYDAY=TU;BYMONTH=3;BYSETPOS=4|20130326T000000  recur.FREQ=YEARLY|20130714T000000  recur.FREQ=YEARLY|20150827T090000
crash/: CMakeLists.txt  crash.c
src/libical/: icalrecur.c  icalrecur.h
